--- a/templates/horarios/horarios_por_docente.html
+++ b/templates/horarios/horarios_por_docente.html
@@ -188,9 +188,19 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
+
     </div>
+    <table id="horario-table">
+        <thead id="encabezado">
+    
+        </thead>
+        <tbody id="cuerpo">
+    
+        </tbody>
+    
+    </table>
     <div href="#" id="" data-href="" class="btn btn-success foot" style="height: 20px;"></div>
 </div>
 
@@ -383,6 +393,7 @@
     //                 console.error('Error al obtener horarios:', error);
     //             });
     //         }
+
 function createTable() {
     var table = document.getElementById('horario-table');
     var encabezado= document.getElementById('encabezado');
@@ -437,6 +448,7 @@ function createTable() {
         celda.style.background = "#D3BE0B"
     }
 }
+
 createTable();
 </script>
 
