--- a/templates/dashboard/cursosxescuela.html
+++ b/templates/dashboard/cursosxescuela.html
@@ -10,7 +10,7 @@
         <li class="breadcrumb-item active"><a href="{{ url_for('cursos') }}">Grupos por Curso</a></li>
     </ol>
 </nav>
-<div class="container">
+<div class="container-fluid">
     <div class="card mt-3" id="card_cursos">
         <div class="card-header bg-red-usat text-white" id="headingOne" data-bs-toggle="collapse"
             data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
