Chamba de front

--- a/templates/dashboard/grupos.html
+++ b/templates/dashboard/grupos.html
@@ -47,10 +47,12 @@
                         <!-- Los datos de los grupos se cargarán dinámicamente aquí -->
                     </tbody>
                 </table>
+                <div class="d-flex justify-content-end mt-3">
+                    <a href="#" id="btn_agregar_grupo" data-href="grupo_agregar.html" class="btn btn-success">Agregar Nuevo Grupo</a>
+                </div>
             </div>
         </div>
     </div>
-    <a href="#" id="btn_agregar_grupo" data-href="grupo_agregar.html" class="btn btn-success">Agregar Nuevo Grupo</a>
     <!-- Modal para agregar o modificar un Grupo -->
     <div class="modal fade" id="modalAgregarGrupo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -113,8 +115,8 @@
                     "render": function (data, type, row) {
                         return `
                         <div class="btn-group" role="group">
-                            <button class="btn btn-warning btn-sm btnModificar me-2" data-id_grupo="${row.id_grupo}">Modificar</button>
-                            <button class="btn btn-danger btn-sm btnEliminar" data-id_grupo="${row.id_grupo}">Eliminar</button>
+                            <button class="btn btn-warning btn-sm btnModificar me-2" data-id_grupo="${row.id_grupo}" title="Modificar"><i class="fas fa-cog"></i></button>
+                            <button class="btn btn-danger btn-sm btnEliminar" data-id_grupo="${row.id_grupo}" title="Eliminar"><i class="fas fa-times"></i></button>
                         </div>
 
 
