--- a/templates/dashboard/ambientes.html
+++ b/templates/dashboard/ambientes.html
@@ -31,6 +31,7 @@
                                 <option value="2">Edificio Juan Pablo II</option>
                                 <option value="3">Edificio de idiomas</option>
                                 <option value="4">Edificio de aulas decanas</option>
+                                <option value="4">Centro Especializado en Formación Odontológica</option>
                             </select>
                         </div>
                     </div>
@@ -41,21 +42,23 @@
                 <table id="tabla-ambiente" class="table table-striped" style="width:100%">
                     <thead>
                         <tr>
-                            <th style="width: 10%; text-align: center;">Nombre</th>
+                            <th style="width: 20%; text-align: center;">Nombre</th>
                             <th style="width: 3%; text-align: center;">Aforo</th>
                             <th style="width: 3%; text-align: center;">Estado</th>
-                            <th style="width: 10%; text-align: center;">Edificio</th>
-                            <th style="width: 10%; text-align: center;">Opciones</th>
+                            <th style="width: 30%; text-align: center;">Edificio</th>
+                            <th style="width: 3%; text-align: center;">Opciones</th>
                         </tr>
                     </thead>
                     <tbody>
                         <!-- Los datos de los ambientes se cargarán dinámicamente aquí -->
                     </tbody>
                 </table>
-            </div>
+                <div class="d-flex justify-content-end mt-3">
+                    <a href="#" id="btn_agregar_ambiente" class="btn btn-success">Agregar Nuevo Ambiente</a>
+                </div>
+            </div>   
         </div>
     </div>
-    <a href="#" id="btn_agregar_ambiente" class="btn btn-success">Agregar Nuevo Ambiente</a>
 
     <!-- Modal para agregar un ambiente -->
     <div class="modal fade" id="modalAgregarAmbiente" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -148,6 +151,7 @@
                                 <option value="2">Edificio Juan Pablo II</option>
                                 <option value="3">Edificio de Idiomas</option>
                                 <option value="4">Edificio de Aulas Decanas</option>
+                                <option value="5">Centro Especializado en Formación Odontológica</option>
                             </select>
                         </div>
                         <div class="mb-3">
@@ -174,7 +178,8 @@
             1: "EDIFICIO ANTIGUO",
             2: "EDIFICIO JUAN PABLO II",
             3: "EDIFICIO DE IDIOMAS",
-            4: "EDIFICIO DE AULAS DECANAS"
+            4: "EDIFICIO DE AULAS DECANAS",
+            5: "CENTRO ESPECIALIZADO EN FORMACIÓN ODONTOLÓGICA"
         };
 
         var table = $('#tabla-ambiente').DataTable({
