--- a/templates/horarios/horarios_por_docente.html
+++ b/templates/horarios/horarios_por_docente.html
@@ -127,6 +127,19 @@
         max-height: 100px;
     }
 
+    table{
+        text-align: center;
+        border-collapse: collapse;
+        border: 1px solid #CCCCCC;
+        background-color: white;
+
+        th,td{
+            padding: 1rem 0;
+            border: 1px solid #CCCCCC;
+            background-color: #FFCC00;
+        }
+        
+    }
 </style>
 
 <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
