--- a/templates/horarios/horarios_por_docente.html
+++ b/templates/horarios/horarios_por_docente.html
@@ -253,7 +253,7 @@
         }
 
         function obtener_docentes() {
-            fetch('/get_personas_activas', {
+            fetch('/get_personas_docentes_activas', {
             headers: {
                 'Content-Type': 'application/json'
             },
