Horarios_Ambiente_Marcia1.0

--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -162,6 +162,13 @@
 									class="align-middle">Horarios por docente</span>
 							</a>
 						</li>
+
+						<li class="sidebar-item">
+							<a class="sidebar-link" href="{{url_for('horarios_por_ambiente')}}">
+								<i class="align-middle" data-feather="align-left"></i> <span
+									class="align-middle">Horarios por ambiente</span>
+							</a>
+						</li>
 						<!-- aca -->
 						<li class="sidebar-item">
 							<span class="sidebar-link a d-flex align-items-center" >
