--- a/templates/horarios/horarios_por_docente.html
+++ b/templates/horarios/horarios_por_docente.html
@@ -92,6 +92,52 @@
     }
     /*FIN ESTILOS DEL BUSCADOR*/
 
+    /*INICIO ESTILOS HORARIO*/
+    #espacio_tabla table{
+        border: 1px solid grey;
+        border-collapse: collapse;
+
+        :is(th,td){
+            border: 1px solid grey;
+        }
+
+        & th{
+            padding: 0.5rem 0;
+        }
+
+        :is(th, td:first-child){
+            background-color: rgb(228, 228, 228);
+            text-align: center;
+            font-weight: bold;
+            color: rgb(0, 0, 226);
+            width: 500px;
+        }
+
+        & td:nth-child(n+2):not(:empty){
+            background-color: #d3c124;
+            text-align: center;
+            padding: 0.8rem 3px 1.5rem 3px;
+
+            & span{
+                width: 100%;
+                display: block;
+            }
+
+            :nth-child(4){
+                color: white;
+                font-weight: bold;
+                padding: 1px 0;
+                margin: 0.8rem 0 1.5rem 0;
+                background-color: #4F21FF;
+            }
+
+            :nth-child(5){
+                color: #4F21FF;
+                font-weight: bold;
+            }
+        }
+    }
+    /*FIN ESTILOS HORARIO*/
     .texto-label{
         color: #70767F;
         text-transform: uppercase;
@@ -125,20 +171,6 @@
 
     #foto_perfil{
         max-height: 100px;
-    }
-
-    table{
-        text-align: center;
-        border-collapse: collapse;
-        border: 1px solid #CCCCCC;
-        background-color: white;
-
-        th,td{
-            padding: 1rem 0;
-            border: 1px solid #CCCCCC;
-            background-color: #FFCC00;
-        }
-        
     }
 </style>
 
@@ -221,8 +253,8 @@
 <script>
     const espacio_tabla = document.querySelector("#espacio_tabla");
     const columna_horas=[];
-    for (let i = 7; i <= 22; i++) {
-            columna_horas.push(`${i.toString().padStart(2, '0')}:00`);
+    for (let i = 7; i < 22; i++) {
+            columna_horas.push(`${i.toString().padStart(2, '0')}:00 - ${(i+1).toString().padStart(2, '0')}:00`);
         }
 
     const columna_dias=['Lunes','Martes','Miércoles','Jueves','Viernes','Sábado','Domingo'];
@@ -406,63 +438,56 @@
     //                 console.error('Error al obtener horarios:', error);
     //             });
     //         }
+    let horarios_prueba = [[1,'Aula 101','CALIDAD Y DESARROLLO DE SOFTWARE','LUNES','07:00:00','09:00:00',2,3,'Presencial','A',7,'Ingeniería de Sistemas y Computación']
+                            ,[2,'Aula 305','DISEÑO DE SOFTWARE','LUNES','13:00:00','15:00:00',3,3,'Virtual','B',5,'Ingeniería de Sistemas y Computación']
+                            ,[3,'Aula 200','INVESTIGACIÓN DE INGENIERÍA','MIERCOLES','18:00:00','20:00:00',4,1,'Virtual','C',7,'Ingeniería de Sistemas y Computación']
+                            ,[4,'Laboratorio 119','SISTEMAS DISTRIBUIDOS','MARTES','08:00:00','11:00:00',4,1,'Presencial','A',6,'Ingeniería de Sistemas de Computación']
+                            ,[5,'Laboratorio 119','SISTEMAS DISTRIBUIDOS','VIERNES','10:00:00','12:00:00',4,1,'Presencial','A',6,'Ingeniería de Sistemas y Computación']];
 
-function createTable() {
-    var table = document.getElementById('horario-table');
-    var encabezado= document.getElementById('encabezado');
-    var cuerpo= document.getElementById('cuerpo');
-    var dias = ["Horario","Lunes", "Martes", "Miércoles", "Jueves", "Viernes", "Sábado", "Domingo"];
-    var hours = [ "7:00-8:00", "8:00-9:00", "9:00-10:00", "10:00-11:00", "11:00-12:00","12:00-13:00", "13:00-14:00", "14:00-15:00", "15:00-16:00", "16:00-17:00","17:00-18:00", "18:00-19:00", "19:00-20:00", "20:00-21:00", "21:00-22:00", "22:00-23:00" ];
-    var horas = [];
-    for( k = 0; k< hours.length; k++){
-        horas.push(parseInt(hours[k].split(':')[0]));
-    }
-    var informacion = ['7:00', '10:00','Lunes', 'Introducción a la Ingeniería']
-    
-    var inicio = parseInt(informacion[0])
-    var fin = parseInt(informacion[1])
-    var dia =  informacion[2]
-    var nombre = informacion[3]
+    function crearTablaHorario(id_docente,horarios_docente){
+        espacio_tabla.innerHTML += `<table id="horario_${id_docente}"><thead><tr><th colspan="8">DOCENTE</th></tr>
+            <tr><th>Horas</th></tr></thead><tbody></tbody></table>`;
+        var thead_tabla = document.querySelector(`#horario_${id_docente} thead tr:nth-child(2)`);
+        var tbody_tabla = document.querySelector(`#horario_${id_docente} tbody`);
+        thead_tabla.innerHTML += columna_dias.map(dia => `<th>${dia}</th>`).join('');
 
-    var rango = (fin-inicio)
-    var indice_dia = dias.indexOf(dia) //columna
-    var indice_hora = horas.indexOf(inicio)+1 //fila
-
-    console.log(rango, indice_dia, indice_hora)
-
-    //datos para las tablas
-    tr = document.createElement('tr') //fila
-    td = document.createElement('td')//col
-    th = document.createElement('th')//col
-    for (var i = 0; i < hours.length+1; i++) { //filas
-        tr = document.createElement('tr') //fila
-        for (var j = 0; j < dias.length; j++) {//columnas
-            td = document.createElement('td')//col
-            if (i==0){
-                //encabezado filas
-                td.textContent = dias[j];
-                td.style.color = "#522ADA"; 
+        if(!horarios_docente.length){
+            tbody_tabla.innerHTML +=`<tr><td colspan="8">No hay horarios registrados</td></tr>`;
+        }else{
+            for(let i=0; i<columna_horas.length; i++){
+                var fila = `<tr><td>${columna_horas[i]}</td>`;
+                var h_inicio_tabla = parseInt(columna_horas[i].substring(0,2));
+                var h_fin_tabla = h_inicio_tabla+1;
+                for(let j=0; j<columna_dias.length; j++){
+                    fila += "<td>";
+                    var dia_tabla = columna_dias[j].normalize("NFD").replace(/[\u0300-\u036f]/g, "").trim().toUpperCase();
+                    for(let k=0; k<horarios_docente.length; k++){
+                        var dia_horario = horarios_docente[k][3].normalize("NFD").replace(/[\u0300-\u036f]/g, "").trim().toUpperCase();
+                        var h_inicio_horario = parseInt(horarios_docente[k][4].substring(0,2)); 
+                        var h_fin_horario = parseInt(horarios_docente[k][5].substring(0,2));
+                        if (dia_horario===dia_tabla && h_inicio_tabla>=h_inicio_horario && h_fin_tabla<=h_fin_horario){
+                            var curso = horarios_docente[k][2];
+                            var ciclo = horarios_docente[k][10];
+                            var carrera = horarios_docente[k][11];
+                            var grupo = horarios_docente[k][9];
+                            var tipo = horarios_docente[k][8];
+                            var ambiente = horarios_docente[k][1];
+                            fila+= `<span>${curso}</span>`;
+                            fila+= `<span>(${ciclo} ciclo - Grupo ${grupo})</span>`;
+                            fila+= `<span>${carrera}</span>`;
+                            fila+=`<span data-tipo="${tipo}">${tipo}</span>`;
+                            fila+=`<span>${ambiente}</span>`;
+                        }   
+                    }
+                    fila+="</td>";
+                }
+                tbody_tabla.innerHTML+= fila;
             }
-            if (j==0 && i>0){
-                td.textContent = hours[i-1];
-                td.style.color = "#522ADA"; 
-            }
-            var div = document.createElement('div');
-            
-            tr.append(td)
         }
-        cuerpo.append(tr)
     }
+    crearTablaHorario(1,horarios_prueba);
 
-    for (var m = 0 ; m< rango; m++){
-        var celda = table.rows[indice_hora+m].cells[indice_dia];
-        celda.textContent = nombre;
-        celda.style.color = "#522ADA"
-        celda.style.background = "#D3BE0B"
-    }
-}
-
-createTable();
+    /*FIN SCRIPT MOSTRAR TABLAS*/
 </script>
 
 {% endblock %}
