--- a/templates/horarios/horarios_por_ambiente.html
+++ b/templates/horarios/horarios_por_ambiente.html
@@ -3,7 +3,27 @@
 {% block contenido %}
 <script src="{{ url_for('static', filename='login/libs/sweetalert2/sweetalert2.js') }}"></script>
 <style>
-    /* Tus estilos CSS aquí */
+    .horario-table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+
+    .horario-table th,
+    .horario-table td {
+        border: 1px solid #ccc;
+        padding: 8px;
+    }
+
+    .horario-celda {
+        background-color: #f0f0f0;
+        /* Color de fondo por defecto */
+    }
+
+    /* Estilos para resaltar las celdas con horario */
+    .horario-celda.horario-asignado {
+        background-color: #aee8b5;
+        /* Color de fondo para las celdas con horario asignado */
+    }
 </style>
 
 <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
@@ -14,7 +34,8 @@
 </nav>
 
 <div class="card mx-2" id="card_horarios">
-    <div class="card-header bg-red-usat text-white" id="headingOne" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+    <div class="card-header bg-red-usat text-white" id="headingOne" data-bs-toggle="collapse"
+        data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
         Horarios asignados por ambiente
     </div>
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-bs-parent="#miAccordion">
@@ -25,36 +46,40 @@
                     <div class="col-md-10 order-md-1 order-sm-2">
                         <!-- Primer input y label -->
                         <div class="form-group row mb-3 d-flex justify-content-center">
-                            <label for="combo_semestre" class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Semestre académico:</label>
+                            <label for="combo_semestre"
+                                class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Semestre
+                                académico:</label>
                             <div class="col-12 col-sm-12 col-md-8 col-lg-9 col-xl-9">
                                 <select class="form-select" aria-label="Default select example" id="combo_semestre">
                                     <option selected>[-- SELECCIONE --]</option>
                                     {% for semestre in semestres %}
-                                        <option value="{{ semestre[1] }}">{{ semestre[1] }}</option>
+                                    <option value="{{ semestre[1] }}">{{ semestre[1] }}</option>
                                     {% endfor %}
                                 </select>
                             </div>
                         </div>
                         <!-- Segundo input y label -->
                         <div class="form-group row mb-3 d-flex justify-content-center">
-                            <label for="combo_edificio" class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Edificio:</label>
+                            <label for="combo_edificio"
+                                class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Edificio:</label>
                             <div class="col-12 col-sm-12 col-md-8 col-lg-9 col-xl-9">
                                 <select class="form-select" aria-label="Default select example" id="combo_edificio">
                                     <option selected>[-- SELECCIONE --]</option>
                                     {% for edificio in edificios %}
-                                        <option value="{{ edificio.idedificio }}">{{ edificio.nombre }}</option>
+                                    <option value="{{ edificio.idedificio }}">{{ edificio.nombre }}</option>
                                     {% endfor %}
                                 </select>
                             </div>
                         </div>
 
                         <div class="form-group row mb-3 d-flex justify-content-center">
-                            <label for="combo_ambiente" class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Ambiente:</label>
+                            <label for="combo_ambiente"
+                                class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Ambiente:</label>
                             <div class="col-12 col-sm-12 col-md-8 col-lg-9 col-xl-9">
                                 <select class="form-select" aria-label="Default select example" id="combo_ambiente">
                                     <option selected>[-- SELECCIONE --]</option>
                                     {% for ambiente in ambientes %}
-                                        <option value="{{ ambiente[1] }}">{{ ambiente[1] }}</option>
+                                    <option value="{{ ambiente[1] }}">{{ ambiente[1] }}</option>
                                     {% endfor %}
                                 </select>
                             </div>
@@ -62,68 +87,132 @@
                     </div>
                 </div>
                 <!-- Tabla inferior -->
-                <div class="card-body show">
-                    <div class="row mt-3">
-                        <div class="col-md-12" id="espacio_tabla">
-                            <table class="table table-bordered text-center" id="tabla_inicial">
-                                <thead class="border border-warning bg-blue-horario-usat">
+                <div class="row mt-3">
+                    <div class="col-md-12">
+                        <table class="horario-table table-bordered text-center" id="horario-table">
+                            <thead class="border border-warning bg-blue-horario-usat">
                                 <tr>
-                                    <th scope="col" class="border border-warning text-light">Hora</th>
+                                    <th scope="col" class="border border-warning text-dark"></th>
                                     <th scope="col" class="border border-warning text-light">Lunes</th>
                                     <th scope="col" class="border border-warning text-light">Martes</th>
                                     <th scope="col" class="border border-warning text-light">Miércoles</th>
                                     <th scope="col" class="border border-warning text-light">Jueves</th>
                                     <th scope="col" class="border border-warning text-light">Viernes</th>
-                                    <th scope="col" class="border border-warning text-light">Sábado</th>
-                                    <th scope="col" class="border border-warning text-light">Domingo</th>
                                 </tr>
-                                </thead>
-                                <tbody class="" style="background-color: #EEEEEE;">
-                                </tbody>
-                            </table>
-                        </div>
+                            </thead>
+                            <tbody class="" style="background-color: #EEEEEE;">
+                                {% for hora in range(7, 22) %}
+                                <tr>
+                                    <th scope="row" class="border border-warning text-dark">{{ hora }}:00 - {{ hora + 1
+                                        }}:00</th>
+                                    <td class="border border-warning horario-celda"></td>
+                                    <td class="border border-warning horario-celda"></td>
+                                    <td class="border border-warning horario-celda"></td>
+                                    <td class="border border-warning horario-celda"></td>
+                                    <td class="border border-warning horario-celda"></td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+
+
+
                     </div>
                 </div>
             </div>
+            <div href="#" id="" data-href="" class="btn btn-success foot" style="height: 20px;"></div>
         </div>
-        <div href="#" id="" data-href="" class="btn btn-success foot" style="height: 20px;"></div>
     </div>
-</div>
 
-<script>
-    $(document).ready(function() {
-        $('#combo_edificio').change(function() {
-            var edificioId = $(this).val();
-            console.log("ID de Edificio Seleccionado:", edificioId);
+    <script>
+        $(document).ready(function () {
+            $('#combo_edificio').change(function () {
+                var edificioId = $(this).val();
+                console.log("ID de Edificio Seleccionado:", edificioId);
 
-            $.ajax({
-                url: '/ambientes_por_edificio/' + encodeURIComponent(edificioId),
-                type: 'GET',
-                success: function(data) {
-                    console.log("Datos recibidos:", data);
-                    var $comboAmbiente = $('#combo_ambiente');
-                    $comboAmbiente.empty();
-                    $comboAmbiente.append('<option selected>[-- SELECCIONE --]</option>');
-                    if (data.length > 0) {
-                        $.each(data, function(index, ambiente) {
-                            $comboAmbiente.append('<option value="' + ambiente.idambiente + '">' + ambiente.nombre + '</option>');
+                $.ajax({
+                    url: '/ambientes_por_edificio/' + encodeURIComponent(edificioId),
+                    type: 'GET',
+                    success: function (data) {
+                        console.log("Datos recibidos:", data);
+                        var $comboAmbiente = $('#combo_ambiente');
+                        $comboAmbiente.empty();
+                        $comboAmbiente.append('<option selected>[-- SELECCIONE --]</option>');
+                        if (data.length > 0) {
+                            $.each(data, function (index, ambiente) {
+                                $comboAmbiente.append('<option value="' + ambiente.idambiente + '">' + ambiente.nombre + '</option>');
+                            });
+                        } else {
+                            $comboAmbiente.append('<option>No hay ambientes disponibles</option>');
+                        }
+                    },
+                    error: function (xhr, status, error) {
+                        console.error("Error:", error);
+                        Swal.fire({
+                            title: 'Error',
+                            text: 'No se pudieron obtener los ambientes. Por favor, intente nuevamente.',
+                            icon: 'error',
+                            confirmButtonText: 'OK'
                         });
-                    } else {
-                        $comboAmbiente.append('<option>No hay ambientes disponibles</option>');
                     }
-                },
-                error: function(xhr, status, error) {
-                    console.error("Error:", error);
-                    Swal.fire({
-                        title: 'Error',
-                        text: 'No se pudieron obtener los ambientes. Por favor, intente nuevamente.',
-                        icon: 'error',
-                        confirmButtonText: 'OK'
-                    });
-                }
+                });
             });
-        });
-    });
-</script>
 
-{% endblock %}
+            $('#combo_ambiente').change(function () {
+                var ambienteId = $(this).val();
+                console.log("ID de Ambiente Seleccionado:", ambienteId);
+
+                $.ajax({
+                    url: '/horarios_por_ambiente/' + encodeURIComponent(ambienteId),
+                    type: 'GET',
+                    success: function (data) {
+                        console.log("Horarios recibidos:", data);
+                        // Reiniciar las clases de las celdas
+                        $('.horario-celda').removeClass('horario-asignado');
+
+                        // Iterar sobre los horarios y resaltar las celdas correspondientes
+                        $.each(data, function (index, horario) {
+                            var diaMap = {
+                                'Lunes': 0,
+                                'Martes': 1,
+                                'Miércoles': 2,
+                                'Jueves': 3,
+                                'Viernes': 4
+                            };
+
+                            var diaIndex = diaMap[horario.dia];
+                            var horaInicio = parseInt(horario.horainicio.split(':')[0]);
+                            var horaFin = parseInt(horario.horafin.split(':')[0]);
+
+                            console.log("Dia Index:", diaIndex);
+                            console.log("Hora Inicio:", horaInicio);
+                            console.log("Hora Fin:", horaFin);
+
+                            if (diaIndex !== undefined && horaInicio >= 7 && horaFin <= 22) {
+                                for (var hora = horaInicio; hora < horaFin; hora++) {
+                                    var horaIndex = hora - 7;
+                                    var $celda = $('.horario-table tbody tr').eq(horaIndex).find('td').eq(diaIndex);
+                                    console.log("Celda seleccionada para el horario:", $celda);
+                                    $celda.addClass('horario-asignado');
+                                }
+                            }
+                        });
+                    },
+                    error: function (xhr, status, error) {
+                        console.error("Error:", error);
+                        Swal.fire({
+                            title: 'Error',
+                            text: 'No se pudieron obtener los horarios del ambiente. Por favor, intente nuevamente.',
+                            icon: 'error',
+                            confirmButtonText: 'OK'
+                        });
+                    }
+                });
+            });
+
+        });
+    </script>
+
+
+
+    {% endblock %}
