--- a/templates/horarios/horarios_por_docente.html
+++ b/templates/horarios/horarios_por_docente.html
@@ -27,7 +27,7 @@
                             <label for="combo_semestre" class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Semestre académico:</label>
                             <div class="col-12 col-sm-12 col-md-8 col-lg-9 col-xl-9">
                                 <select class="form-select" aria-label="Default select example" id="combo_semestre">
-                                    <option selected>[-- SELECCIONE --]</option>
+                                    <option value="-1" selected>[-- SELECCIONE --]</option>
                                     {% for semestre in semestres %}
                                         <option value="{{semestre[1]}}">{{semestre[1]}}</option>
                                     {% endfor %}
@@ -41,12 +41,13 @@
                                 <!-- Buscador con autocompletado de sugerencias -->
                                 <div id="buscador-multiopcion-sugerencias" class="">
                                     <div id="bmos-barra-busqueda" contenteditable="false">
-                                        <p contenteditable="true"></p>
+                                        <p contenteditable="false"></p>
                                     </div>
                                     <ul id="bmos-lista-sugerencias">
                                     </ul>
+                                    <span data-mensaje-error="" style="color: red; text-align: center;"></span>
                                 </div>
-                            </div>
+                            </div>                            
                         </div>
                     </div>
                     <div class="col-md-2 order-md-2 order-sm-1  d-flex justify-content-center align-items-center">
