--- a/static/horarios_por_docente/css/horarios_por_docente.css
+++ b/static/horarios_por_docente/css/horarios_por_docente.css
@@ -90,6 +90,7 @@
     border: 1px solid grey;
     border-collapse: collapse;
     width: 100%;
+    margin-bottom: 2rem;
 
     :is(th,td){
         border: 1px solid grey;
@@ -109,6 +110,18 @@
         text-align: center;
         font-weight: bold;
         color: rgb(0, 0, 226);
+    }
+
+    & th[data-horario="nombre_docente"]{
+        background-color: #E33439;
+        color: white;
+        font-size: 1rem;
+    }
+
+    & td[data-horario="Sin horarios"]{
+        color: black;
+        height: 20px;
+        padding: 10px 0;
     }
 
     & td:nth-child(n+2):not(:empty){
@@ -179,3 +192,10 @@
 #foto_perfil{
     max-height: 100px;
 }
+
+@media (max-width:563px){
+    #espacio_tabla{
+      overflow-x: scroll;
+    }
+    /*----------------------------------------FIN ESTILOS MEDIAQUERYS-----------------------------------------------*/
+  }
