--- a/templates/horarios/horarios_por_docente.html
+++ b/templates/horarios/horarios_por_docente.html
@@ -57,6 +57,7 @@
                 </div>
                 <!-- Tabla inferior -->
                 <div class="card-body show">
+                    <div id="loading"><div></div></div>
                     <div class="row mt-3">
                         <div class="col-md-12" id="espacio_tabla">
                         </div>
