--- a/templates/dashboard/docentexcurso.html
+++ b/templates/dashboard/docentexcurso.html
@@ -33,9 +33,9 @@
                 <table id="tabla-cursoxdocentes" class="table table-striped table-bordered tabla-cursoxdocentes" style="width:100%">
                     <thead>
                         <tr>
-                            <th style ="text-align: center">Curso</th>
-                            <th style ="text-align: center">Docente</th>
-                            <th style ="text-align: center">Opciones</th>
+                            <th style ="width:40%; text-align: center">Curso</th>
+                            <th style ="width:20%; text-align: center">Docente</th>
+                            <th style ="width:4%; text-align: center">Opciones</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -123,11 +123,11 @@
                 { "data": "nombreCurso" },
                 { "data": "nombreDocente" },
                 {
-                    "data": null,
+                    "data": null, "className": 'dt-body-center',
                     "render": function (data, type, row) {
                         return `
-                    <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idcurso}">Modificar</button>
-                    <button class="btn btn-danger btn-sm btnEliminar" data-iddocente="${row.idpersona}" data-idcurso="${row.idcurso}" data-nombreAmbiente="${row.nombreAmbiente}" data-nombreCurso="${row.nombreCurso}">Eliminar</button>
+                    <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idcurso}" title="Modificar"><i class="fas fa-cog"></i></button>
+                    <button class="btn btn-danger btn-sm btnEliminar" data-iddocente="${row.idpersona}" data-idcurso="${row.idcurso}" data-nombreAmbiente="${row.nombreAmbiente}" data-nombreCurso="${row.nombreCurso}" title="Eliminar"><i class="fas fa-times"></i></button>
                 `;
                     }
                 }
