--- a/templates/dashboard/grupos.html
+++ b/templates/dashboard/grupos.html
@@ -111,7 +111,7 @@
                 },
                 { "data": "descripcion","className": 'dt-body-center' }, // Asegúrate de ajustar según la respuesta del servidor
                 {
-                    "data": null,
+                    "data": null, "className": 'dt-body-center',
                     "render": function (data, type, row) {
                         return `
                         <div class="btn-group" role="group">
