--- a/templates/dashboard/ambientes.html
+++ b/templates/dashboard/ambientes.html
@@ -54,7 +54,7 @@
                     </tbody>
                 </table>
                 <div class="d-flex justify-content-end mt-3">
-                    <a href="#" id="btn_agregar_ambiente" class="btn btn-success">Agregar Nuevo Ambiente</a>
+                    <a href="#" id="btn_agregar_ambiente" class="btn btn-primary">Agregar Nuevo Ambiente</a>
                 </div>
             </div>   
         </div>
