--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -33,7 +33,7 @@
                 </table>
             </div>
             <div class="d-flex justify-content-end mt-3">
-                <a href="#" id="btn_agregar_curso" class="btn btn-success">Agregar Nuevo Curso</a>
+                <a href="#" id="btn_agregar_curso" class="btn btn-primary">Agregar Nuevo Curso</a>
             </div>
         </div>
     </div>
