--- a/templates/dashboard/ambientesxcurso.html
+++ b/templates/dashboard/ambientesxcurso.html
@@ -123,11 +123,11 @@
                 { "data": "nombreCurso" },
                 { "data": "nombreAmbiente" },
                 {
-                    "data": null,
+                    "data": null, "className": 'dt-body-center',
                     "render": function (data, type, row) {
                         return `
-                    <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idcurso}"><i class="fas fa-cog"></i></button>
-                    <button class="btn btn-danger btn-sm btnEliminar" data-idambiente="${row.idambiente}" data-idcurso="${row.idcurso}" data-nombreAmbiente="${row.nombreAmbiente}" data-nombreCurso="${row.nombreCurso}"><i class="fas fa-times"></i></button>
+                    <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idcurso}" title="Modificar"><i class="fas fa-cog"></i></button>
+                    <button class="btn btn-danger btn-sm btnEliminar" data-idambiente="${row.idambiente}" data-idcurso="${row.idcurso}" data-nombreAmbiente="${row.nombreAmbiente}" data-nombreCurso="${row.nombreCurso}" title="Eliminar"><i class="fas fa-times"></i></button>
                 `;
                     }
                 }
