--- a/templates/dashboard/cursosxescuela.html
+++ b/templates/dashboard/cursosxescuela.html
@@ -39,24 +39,26 @@
             </div>
         </div>
         <hr class="border-black">
-        <div class="me-5 ms-5" id="miTabla">
-            <table class="table" id="tabla-cursos">
-                <thead>
-                    <tr>
-                        <th style="text-align:center">Código</th>
-                        <th style="width: 30%; text-align: center">Nombre del curso</th>
-                        <th style="text-align:center">Ciclo</th>
-                        <th style="text-align:center">N° Grupos</th>
-                        <th><input type="checkbox" class="form-check-input me-3 border border-dark" onclick="seleccionar_toda()" id="est"></th>
-                    </tr>
-                </thead>
-                <tbody id="cuerpo_tabla">
-                </tbody>
-            </table>
-        </div>
-        <div class="text-end mb-2 mt-3" id="contenedor-botones">
-            <button class="btn btn-danger">Cancelar</button>
-            <button class="btn btn-success bg_green_button" onclick="dato_selecciondo()">Guardar</button>
+        <div class="card-body">
+            <div class="table-responsive" id="miTabla">
+                <table class="table table-striped table-bordered tabla-cursos" style="width:100% " id="tabla-cursos">
+                    <thead>
+                        <tr>
+                            <th style="text-align:center">Código</th>
+                            <th style="width: 30%; text-align: center">Nombre del curso</th>
+                            <th style="text-align:center">Ciclo</th>
+                            <th style="text-align:center">N° Grupos</th>
+                            <th><input type="checkbox" class="form-check-input me-3 border border-dark" onclick="seleccionar_toda()" id="est"></th>
+                        </tr>
+                    </thead>
+                    <tbody id="cuerpo_tabla">
+                    </tbody>
+                </table>
+                <div class="text-end mb-2 mt-3" id="contenedor-botones">
+                    <a class="btn btn-danger" style="margin-right: 1%;">Cancelar</a>
+                    <a class="btn btn-primary bg_green_button" onclick="dato_selecciondo()">Guardar</a>
+                </div>
+            </div> 
         </div>
     </div>
 </div>
