--- a/templates/dashboard/grupos.html
+++ b/templates/dashboard/grupos.html
@@ -48,7 +48,7 @@
                     </tbody>
                 </table>
                 <div class="d-flex justify-content-end mt-3">
-                    <a href="#" id="btn_agregar_grupo" data-href="grupo_agregar.html" class="btn btn-success">Agregar Nuevo Grupo</a>
+                    <a href="#" id="btn_agregar_grupo" data-href="grupo_agregar.html" class="btn btn-primary">Agregar Nuevo Grupo</a>
                 </div>
             </div>
         </div>
