--- a/templates/dashboard/ambientesxcurso.html
+++ b/templates/dashboard/ambientesxcurso.html
@@ -17,16 +17,16 @@
             <div class="ms-4 mt-3">
                 <!-- Cursos -->
                 <div class="d-flex mb-3 mt-3">
-                    <label for="curso" class="mb-2 me-4 mt-2">Curso:</label>
-                    <label id="cursoSeleccionado" class="mb-2 me-4 mt-2">Elija un curso</label>
+                    <label for="curso" class="mb-2 me-4 mt-2" style="width: 7%;">Curso:</label>
+                    <label id="cursoSeleccionado" class="mb-2 me-4 mt-2" style="width: 10%;">Elija un curso</label>
                     <input type="hidden" id="cursoIdSeleccionado">
-                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCursos">Añadir</button>
+                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCursos" style="width: 8%;">Añadir</button>
                 </div>
                 <!-- Ambientes -->
                 <div class="d-flex mb-3 mt-3">
-                    <label for="ambiente" class="mb-2 me-4 mt-2">Ambiente:</label>
-                    <label id="ambienteSeleccionado" class="mb-2 me-4 mt-2">Elija un ambiente</label>
-                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalAmbientes">Asignar</button>
+                    <label for="ambiente" class="mb-2 me-4 mt-2" style="width: 7%;">Ambiente:</label>
+                    <label id="ambienteSeleccionado" class="mb-2 me-4 mt-2" style="width: 10%;">Elija un ambiente</label>
+                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalAmbientes" style="width: 8%;">Asignar</button>
                 </div>
             </div>
             <div class="table-responsive">
